flux/infra/configs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: HTTPRoute
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-lab-lkwt-dev-tls
